add grant-datacap support for lotus fountain

--- a/cmd/lotus-fountain/site/index.html
+++ b/cmd/lotus-fountain/site/index.html
@@ -13,6 +13,12 @@
         <div class="Index-node">
             <a href="funds.html">[Send Funds]</a>
         </div>
+        <div class="Index-node">
+            [LOTUS DEVNET GRANT DATACAP]
+        </div>
+        <div class="Index-node">
+            <a href="datacap.html">[Grant DataCap]</a>
+        </div>
     </div>
     <div class="Index-footer">
         <div>
