follow the new style for html from master branch

--- a/cmd/lotus-fountain/site/datacap.html
+++ b/cmd/lotus-fountain/site/datacap.html
@@ -15,7 +15,7 @@
 <div class="Index">
     <div class="Index-nodes">
         <div class="Index-node">
-            [GRANT DATACAP]
+            GRANT DATACAP
         </div>
         <div class="Index-node">
             <form action='/datacap' method='post' id='datacap-form'>
