--- a/cmd/lotus-fountain/site/index.html
+++ b/cmd/lotus-fountain/site/index.html
@@ -14,10 +14,10 @@
             <a href="funds.html">Send Funds</a>
         </div>
         <div class="Index-node">
-            [LOTUS DEVNET GRANT DATACAP]
+            LOTUS DEVNET GRANT DATACAP
         </div>
         <div class="Index-node">
-            <a href="datacap.html">[Grant DataCap]</a>
+            <a href="datacap.html">Grant DataCap</a>
         </div>
     </div>
     <div class="Index-footer">
