pass the right g-recaptcha data

--- a/cmd/lotus-fountain/site/datacap.html
+++ b/cmd/lotus-fountain/site/datacap.html
@@ -6,7 +6,7 @@
 	<script src="https://www.google.com/recaptcha/api.js"></script>
 	<script>
    		function onSubmit(token) {
-     	document.getElementById("funds-form").submit();
+     	document.getElementById("datacap-form").submit();
    	}
 	</script>
 
