--- a/cmd/lotus-provider/web/static/index.html
+++ b/cmd/lotus-provider/web/static/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <title>Lotus Provider Cluster Overview</title>
-    <script module src="chain-connectivity.js"></script>
+    <script type="module" src="chain-connectivity.js"></script>
     <style>
         html,
         body {
