--- a/cmd/lotus-provider/web/static/index.html
+++ b/cmd/lotus-provider/web/static/index.html
@@ -1,31 +1,45 @@
 <html>
-
 <head>
     <title>Lotus Provider Cluster Overview</title>
+    <script src="https://unpkg.com/htmx.org@1.9.5" integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO" crossorigin="anonymous"></script>
     <script type="module" src="chain-connectivity.js"></script>
     <style>
-        html,
-        body {
+        html, body {
             background: #0f0f0f;
             color: #ffffff;
             padding: 0;
             margin: 0;
+
             font-family: monospace;
+        }
+
+        table td, table th {
+            font-size: 13px;
         }
 
         .app-head {
             width: 100%;
         }
-
         .head-left {
             display: inline-block;
         }
-
         .head-right {
             display: inline-block;
             float: right;
         }
 
+        table {
+            border-collapse: collapse;
+        }
+
+        table td, table th {
+            border-left: 1px solid #f0f0f0;
+            padding: 1px 5px;
+        }
+
+        table tr td:first-child, table tr th:first-child {
+            border-left: none;
+        }
 
         a:link {
             color: #cfc;
@@ -37,6 +51,16 @@
 
         a:hover {
             color: #af7;
+        }
+
+        .success {
+            color: green;
+        }
+        .warning {
+            color: yellow;
+        }
+        .error {
+            color: red;
         }
 
         .dash-tile {
@@ -73,109 +97,97 @@
         .deadline-proven {
             background-color: green;
         }
-
         .deadline-partially-faulty {
             background-color: yellow;
         }
-
         .deadline-faulty {
             background-color: red;
         }
     </style>
 </head>
-
 <body>
-    <div class="app-head">
-        <div class="head-left">
-            <h1>Lotus Provider Cluster</h1>
-        </div>
-        <div class="head-right">
-            version [todo]
-        </div>
+<div class="app-head">
+    <div class="head-left">
+        <h1>Lotus Provider Cluster</h1>
     </div>
-    <hr />
-    <div class="page">
-        <div class="info-block">
-            <h2>Chain Connectivity</h2>
-            <chain-connectivity></chain-connectivity>
-        </div>
+    <div class="head-right">
+        version [todo]
+    </div>
+</div>
+<hr/>
+<div class="page">
+    <div class="info-block">
+        <h2>Chain Connectivity</h2>
+        <chain-connectivity></chain-connectivity>
     </div>
     <hr>
     <div class="info-block">
         <h2>Actor Summary</h2>
         <table>
             <thead>
-                <tr>
-                    <th>Address</th>
-                    <th>Config Layers</th>
-                    <th>QaP</th>
-                    <th>Deadlines</th>
-                </tr>
+            <tr>
+                <th>Address</th>
+                <th>Config Layers</th>
+                <th>QaP</th>
+                <th>Deadlines</th>
+            </tr>
             </thead>
-            <tbody>
-                <tr>
-                    <td>f01234</td>
-                    <td>mig0</td>
-                    <td>23TiB</td>
-                    <td>
-                        <div class="deadline-box">
-                            <div class="deadline-entry deadline-proven"></div>
-                            <div class="deadline-entry deadline-partially-faulty"></div>
-                            <div class="deadline-entry deadline-faulty"></div>
-                            <div class="deadline-entry deadline-proven"></div>
-                            <div class="deadline-entry deadline-proven"></div>
-                            <div class="deadline-entry deadline-entry-cur"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                            <div class="deadline-entry"></div>
-                        </div>
-                    </td>
-                </tr>
+            <tbody hx-get="/hapi/simpleinfo/actorsummary" hx-trigger="load,every 5s">
             </tbody>
         </table>
     </div>
+    <hr>
+    <div class="info-block">
+        <h2>Cluster Machines</h2>
+        <table>
+            <thead>
+            <tr>
+                <th>Host</th>
+                <th>ID</th>
+                <th>Config Layers</th>
+                <th>Last Contact</th>
+            </tr>
+            </thead>
+            <tbody hx-get="/hapi/simpleinfo/machines" hx-trigger="load,every 5s">
+            </tbody>
+        </table>
     </div>
+    <hr>
+    <div class="info-block">
+        <h2>Recently Finished Tasks</h2>
+        <table>
+            <thead>
+            <tr>
+                <th>Name</th>
+                <th>ID</th>
+                <th>Executor</th>
+                <th>Posted</th>
+                <th>Start</th>
+                <th>End</th>
+                <th>Outcome</th>
+                <th>Message</th>
+            </tr>
+            </thead>
+            <tbody hx-get="/hapi/simpleinfo/taskhistory" hx-trigger="load, every 5s">
+            </tbody>
+        </table>
+    </div>
+    <hr>
+    <div class="info-block">
+        <h2>Cluster Tasks</h2>
+        <table>
+            <thead>
+            <tr>
+                <th>Task</th>
+                <th>ID</th>
+                <th>Posted</th>
+                <th>Owner</th>
+            </tr>
+            </thead>
+            <tbody hx-get="/hapi/simpleinfo/tasks" hx-trigger="load,every 5s">
+            </tbody>
+        </table>
+    </div>
+</div>
 </body>
-
 </html>
