--- a/provider/lpweb/static/index.html
+++ b/provider/lpweb/static/index.html
@@ -3,79 +3,9 @@
     <title>Lotus Provider Cluster Overview</title>
     <script src="https://unpkg.com/htmx.org@1.9.5" integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO" crossorigin="anonymous"></script>
     <script type="module" src="chain-connectivity.js"></script>
+    <link rel="stylesheet" href="main.css">
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
     <style>
-        html, body {
-            background: #0f0f0f;
-            color: #ffffff;
-            padding: 0;
-            margin: 0;
-
-            font-family: 'Hack', monospace;
-        }
-
-        table td, table th {
-            font-size: 13px;
-        }
-
-        .app-head {
-            width: 100%;
-        }
-        .head-left {
-            display: inline-block;
-        }
-        .head-right {
-            display: inline-block;
-            float: right;
-        }
-
-        table {
-            border-collapse: collapse;
-        }
-
-        table td, table th {
-            border-left: 1px solid #f0f0f0;
-            padding: 1px 5px;
-        }
-
-        table tr td:first-child, table tr th:first-child {
-            border-left: none;
-        }
-
-        a:link {
-            color: #cfc;
-        }
-
-        a:visited {
-            color: #dfa;
-        }
-
-        a:hover {
-            color: #af7;
-        }
-
-        .success {
-            color: greenyellow;
-        }
-        .warning {
-            color: yellow;
-        }
-        .error {
-            color: red;
-        }
-
-        .dash-tile {
-            display: flex;
-            flex-direction: column;
-            padding: 0.75rem;
-            background: #3f3f3f;
-
-            & b {
-                padding-bottom: 0.5rem;
-                color: deeppink;
-            }
-        }
-
         .deadline-box {
             display: grid;
             grid-template-columns: repeat(16, auto);
@@ -139,7 +69,7 @@
     </div>
     <hr>
     <div class="info-block">
-        <h2>PoRep Pipeline</h2>
+        <h2><a href="/pipeline_porep.html">PoRep Pipeline</a></h2>
         <table>
             <thead>
             <tr>
