curio web: Show basic balances in Actor Summary

--- a/curiosrc/web/static/index.html
+++ b/curiosrc/web/static/index.html
@@ -97,6 +97,9 @@
                 <th>Config Layers</th>
                 <th>QaP</th>
                 <th>Deadlines</th>
+                <th>Balance</th>
+                <th>Available</th>
+                <th>Worker</th>
             </tr>
             </thead>
             <tbody hx-get="/hapi/simpleinfo/actorsummary" hx-trigger="load,every 5s">
