feat: curioweb: add favicon

--- a/curiosrc/web/static/index.html
+++ b/curiosrc/web/static/index.html
@@ -34,10 +34,16 @@
         .deadline-faulty {
             background-color: red;
         }
+        .logo {
+            display: inline-block;
+        }
     </style>
 </head>
 <body>
 <div class="app-head">
+    <div class="logo">
+        <img src="favicon.svg" alt="Curio Logo" style="height: 64px; margin: 8px;">
+    </div>
     <div class="head-left">
         <h1>Curio Cluster</h1>
     </div>
