warn-on-no-post

--- a/curiosrc/web/static/index.html
+++ b/curiosrc/web/static/index.html
@@ -101,7 +101,7 @@
             <thead>
             <tr>
                 <th>Address</th>
-                <th>Config Layers</th>
+                <th>Config Layers Available</th>
                 <th>QaP</th>
                 <th>Deadlines</th>
                 <th>Balance</th>
