--- a/curiosrc/web/static/index.html
+++ b/curiosrc/web/static/index.html
@@ -2,7 +2,7 @@
 <head>
     <title>Curio Cluster Overview</title>
     <script src="https://unpkg.com/htmx.org@1.9.5" integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO" crossorigin="anonymous"></script>
-    <script type="module" src="chain-connectivity.js"></script>
+    <script type="module" src="chain-connectivity.jsm"></script>
     <link rel="stylesheet" href="main.css">
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
     <style>
