--- a/curiosrc/web/static/config/edit.html
+++ b/curiosrc/web/static/config/edit.html
@@ -4,18 +4,24 @@
     <title>JSON Schema Editor</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@json-editor/json-editor@latest/dist/jsoneditor.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/base/jquery-ui.min.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/ui-darkness/jquery-ui.min.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/ui-darkness/theme.min.css" rel="stylesheet">
 </head>
-<body>
-    <div id="editor"></div>
+<body style="margin: 16px">
+    <div><button id="saveButton" class="ui-button ui-widget ui-corner-all">
+    <span class="ui-icon ui-icon-disk" style="transform: scale(1.5)"></span> Save
+</button></div>
+
+    <div id="editor" ></div>
 
     <script>
+        var editor;
         var urlParams = new URLSearchParams(window.location.search);
+        var layer = urlParams.get('layer');
         // Make simultaneous GET requests to fetch the existing data and JSON Schema
         Promise.all([
-            axios.get('/api/config/layers/'+urlParams.get('layer')),
+            axios.get('/api/config/layers/'+layer),
             axios.get('/api/config/schema')
         ])
             .then(responses => {
@@ -29,11 +35,28 @@
                     schema: schema,
                     startval: existingData,
                     theme: 'bootstrap5',
+                    iconlib: 'jqueryui',
                     show_opt_in: true,
                     disable_edit_json: true,
                 };
 
-                var editor = new JSONEditor(container, options);
+                editor = new JSONEditor(container, options);
+
+                // Attach function to saveButton click event
+                var saveButton = document.getElementById('saveButton');
+                saveButton.addEventListener('click', function() {
+                    const value = editor.getValue();
+                    axios.post('/api/config/layers/'+layer, value)
+                        .then(response => {
+                            // Set cookie named 'message' with the value 'Data saved successfully'
+                            document.cookie = 'message=The layer "'+layer+'" saved successfully.; path=/;';
+                            
+                            window.location.href = '/config/';
+                        })
+                        .catch(error => {
+                            alert('Error saving data:', error);
+                        });
+                });
             })
             .catch(error => {
                 console.error('Error fetching data:', error);
