--- a/curiosrc/web/static/sector/index.html
+++ b/curiosrc/web/static/sector/index.html
@@ -4,7 +4,7 @@
 <head>
   <title>Configuration Editor</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
-  <script type="module" src="/ux/curio-ux.mod.js"></script>
+  <script type="module" src="/ux/curio-ux.mjs"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
