--- a/curiosrc/web/static/sector/index.html
+++ b/curiosrc/web/static/sector/index.html
@@ -44,10 +44,8 @@
         {title: "Expiry", data:'ExpiresAt'},
         {title: "🔗", data:'IsOnChain'},
         {title: "Has Sealed", data:'HasSealed'},
-        {title: "⨎/Day", data:'ExpectedDayReward'},
-        {title: "Fil+", data:'IsFilPlus'},
         {title: "Has Unsealed", data:'HasUnsealed'},
-        {title: "Seal Proof", data:'SealProof'},
+        {title: "Fil+", data:'IsFilPlus'},
         {title: "Has Snap", data:'HasSnap'},
         {title: "Size", data:"SealInfo"}
       ],
@@ -106,7 +104,7 @@
         rows: '%d rows selected',
         headerCheckbox: true,
       },
-      scrollY:        200,
+      scrollY:        window.innerHeight - 150,
       deferRender:    true,
       scroller:       true,
       responsive:     true,
