--- a/curiosrc/web/static/config/edit.html
+++ b/curiosrc/web/static/config/edit.html
@@ -2,13 +2,13 @@
 <html>
 <head>
     <title>JSON Schema Editor</title>
+    <script type="module" src="/ux/curio-ux.mjs"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.21.1/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@json-editor/json-editor@latest/dist/jsoneditor.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">    <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/base/jquery-ui.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/ui-darkness/jquery-ui.min.css" rel="stylesheet">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/themes/ui-darkness/theme.min.css" rel="stylesheet">
 </head>
-<body>
+<body style="visibility: hidden;">
 <style>
     #saveButton {
         display: block;
@@ -61,8 +61,18 @@
     .show {
         display: block;
     }
-</style>
 
+    /* Fix for dark mode */
+    .card.bg-light {
+        background-color: rgb(11, 22, 34) !important;
+    }
+    input.form-control {
+        background: #111;
+        color: white;
+        font-weight: bold;
+    }
+</style>
+<curio-ux>
 <section class="section container-fluid implementations">
     <div class="row justify-content-center content">
         <div class="col-md-8">
@@ -145,6 +155,6 @@
             </script>
         </div>
     </div>
-</section>
+</section></curio-ux>
 </body>
 </html>
