--- a/curiosrc/web/static/pipeline_porep.html
+++ b/curiosrc/web/static/pipeline_porep.html
@@ -3,9 +3,67 @@
     <title>Lotus Provider PoRep Pipeline</title>
     <script src="https://unpkg.com/htmx.org@1.9.5" integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO" crossorigin="anonymous"></script>
     <script type="module" src="/ux/curio-ux.mjs"></script>
-    <script type="module" src="chain-connectivity.js"></script>
-    <link rel="stylesheet" href="main.css">
+    <script type="module" src="/chain-connectivity.mjs"></script>
+    <link rel="stylesheet" href="/ux/main.css">
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
+    <style>
+        /* Path: curiosrc/web/hapi/web/pipeline_porep_sectors.gohtml */
+        .porep-pipeline-table,
+        .porep-state {
+            color: #d0d0d0;
+        }
+
+        .porep-pipeline-table td,
+        .porep-pipeline-table th {
+            border-left: none;
+            border-collapse: collapse;
+        }
+
+        .porep-pipeline-table tr:nth-child(odd) {
+            border-top: 6px solid #999999;
+
+        }
+
+        .porep-pipeline-table tr:first-child,
+        .porep-pipeline-table tr:first-child {
+            border-top: none;
+        }
+
+        .porep-state {
+            border-collapse: collapse;
+        }
+
+        .porep-state td,
+        .porep-state th {
+            border-left: 1px solid #f0f0f0;
+            border-right: 1px solid #f0f0f0;
+
+            padding: 1px 5px;
+
+            text-align: center;
+            font-size: 0.7em;
+        }
+
+        .porep-state tr {
+            border-top: 1px solid #f0f0f0;
+        }
+
+        .porep-state tr:first-child {
+            border-top: none;
+        }
+
+        .pipeline-active {
+            background-color: #303060;
+        }
+
+        .pipeline-success {
+            background-color: #306030;
+        }
+
+        .pipeline-failed {
+            background-color: #603030;
+        }
+    </style>
 </head>
 <body style="visibility: hidden">
 <curio-ux>
