--- a/curiosrc/web/static/index.html
+++ b/curiosrc/web/static/index.html
@@ -1,10 +1,12 @@
-<html>
+<!doctype html>
+<html lang="en" style="background:rgb(11, 22, 34)">
 <head>
     <title>Curio Cluster Overview</title>
-    <script src="https://unpkg.com/htmx.org@1.9.5" integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.5"
+        integrity="sha384-xcuj3WpfgjlKF+FXhSQFQ0ZNr39ln+hwjN3npfM9VBnUskLolQAcN80McRIVOPuO"
+        crossorigin="anonymous"></script>
     <script type="module" src="chain-connectivity.mjs"></script>
-    <link rel="stylesheet" href="main.css">
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
+    <script type="module" src="/ux/curio-ux.mjs"></script>
     <style>
         .deadline-box {
             display: grid;
@@ -28,129 +30,172 @@
         .deadline-proven {
             background-color: green;
         }
+
         .deadline-partially-faulty {
             background-color: yellow;
         }
+
         .deadline-faulty {
             background-color: red;
         }
+
         .logo {
             display: inline-block;
         }
+
+        .dash-tile {
+            display: flex;
+            flex-direction: column;
+            padding: 0.75rem;
+            background: #3f3f3f;
+
+            & b {
+                padding-bottom: 0.5rem;
+                color: deeppink;
+            }
+        }
     </style>
 </head>
-<body>
-<div class="app-head">
-    <div class="logo">
-        <img src="favicon.svg" alt="Curio Logo" style="height: 64px; margin: 8px;">
-    </div>
-    <div class="head-left">
-        <h1>Curio Cluster</h1>
-    </div>
-    <div class="head-right">
-        version [todo]
-    </div>
-</div>
-<hr/>
-<div class="page">
-    <div class="info-block">
-        <h2>Chain Connectivity</h2>
-        <chain-connectivity></chain-connectivity>
-    </div>
-    <hr>
-    <div class="info-block">
-        <h2>Cluster Machines</h2>
-        <table>
-            <thead>
-            <tr>
-                <th>Host</th>
-                <th>ID</th>
-                <th>Last Contact</th>
-                <th>Tasks (24h)</th>
-            </tr>
-            </thead>
-            <tbody hx-get="/hapi/simpleinfo/machines" hx-trigger="load,every 5s">
-            </tbody>
-        </table>
-    </div>
-    <hr>
-    <div class="info-block">
-        <h2><a href="/pipeline_porep.html">PoRep Pipeline</a></h2>
-        <table>
-            <thead>
-            <tr>
-                <th>Address</th>
-                <th>SDR</th>
-                <th>Trees</th>
-                <th>Precommit Msg</th>
-                <th>Wait Seed</th>
-                <th>PoRep</th>
-                <th>Commit Msg</th>
-                <th>Done</th>
-                <th>Failed</th>
-            </tr>
-            </thead>
-            <tbody hx-get="/hapi/simpleinfo/pipeline-porep" hx-trigger="load,every 5s">
-            </tbody>
-        </table>
-    </div>
-    <hr>
-    <div class="info-block">
-        <h2>Actor Summary</h2>
-        <table>
-            <thead>
-            <tr>
-                <th>Address</th>
-                <th>Config Layers Available</th>
-                <th>QaP</th>
-                <th>Deadlines</th>
-                <th>Balance</th>
-                <th>Available</th>
-                <th>Worker</th>
-                <th>Wins</th>
-            </tr>
-            </thead>
-            <tbody hx-get="/hapi/simpleinfo/actorsummary" hx-trigger="load,every 5s">
-            </tbody>
-        </table>
-    </div>
-    <hr>
-    <div class="info-block">
-        <h2>Recently Finished Tasks</h2>
-        <table>
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th>ID</th>
-                <th>Executor</th>
-                <th>Posted</th>
-                <th>Start</th>
-                <th>Queued</th>
-                <th>Took</th>
-                <th>Outcome</th>
-                <th>Message</th>
-            </tr>
-            </thead>
-            <tbody hx-get="/hapi/simpleinfo/taskhistory" hx-trigger="load, every 2s">
-            </tbody>
-        </table>
-    </div>
-    <hr>
-    <div class="info-block">
-        <h2>Cluster Tasks</h2>
-        <table>
-            <thead>
-            <tr>
-                <th style="min-width: 128px">Task</th>
-                <th>ID</th>
-                <th>Posted</th>
-                <th>Owner</th>
-            </tr>
-            </thead>
-            <tbody hx-get="/hapi/simpleinfo/tasks" hx-trigger="load,every 1s">
-            </tbody>
-        </table>
-    </div>
-</div>
+<body style="visibility:hidden">
+    <curio-ux>
+        <div class="page">
+            <div class="row">
+                <div class="col-md-auto" style="width: 50%">
+                    <div class="info-block">
+                        <h2>Chain Connectivity</h2>
+                        <chain-connectivity></chain-connectivity>
+                    </div>
+                </div>
+                <div class="col-md-auto">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-auto" style="width: 50%">
+                    <div class="info-block">
+                        <h2>Cluster Machines</h2>
+                        <table class="table table-dark">
+                            <thead>
+                            <tr>
+                                <th>Host</th>
+                                <th>ID</th>
+                                <th>Last Contact</th>
+                                <th>Tasks (24h)</th>
+                            </tr>
+                            </thead>
+                            <tbody hx-get="/hapi/simpleinfo/machines" hx-trigger="load,every 5s">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-md-auto">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-auto" style="width: 50%">
+                    <div class="info-block">
+                        <h2><a href="/pipeline_porep.html">PoRep Pipeline</a></h2>
+                        <table class="table table-dark">
+                            <thead>
+                            <tr>
+                                <th>Address</th>
+                                <th>SDR</th>
+                                <th>Trees</th>
+                                <th>Precommit Msg</th>
+                                <th>Wait Seed</th>
+                                <th>PoRep</th>
+                                <th>Commit Msg</th>
+                                <th>Done</th>
+                                <th>Failed</th>
+                            </tr>
+                            </thead>
+                            <tbody hx-get="/hapi/simpleinfo/pipeline-porep" hx-trigger="load,every 5s">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-md-auto">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-auto" style="width: 50%">
+                    <div class="info-block">
+                        <h2>Actor Summary</h2>
+                        <table class="table table-dark">
+                            <thead>
+                            <tr>
+                                <th>Address</th>
+                                <th>Config Layers Available</th>
+                                <th>QaP</th>
+                                <th>Deadlines</th>
+                                <th>Balance</th>
+                                <th>Available</th>
+                                <th>Worker</th>
+                                <th>Wins</th>
+                            </tr>
+                            </thead>
+                            <tbody hx-get="/hapi/simpleinfo/actorsummary" hx-trigger="load,every 5s">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-md-auto">
+                </div>
+            </div>
+
+
+            <div class="row">
+                <div class="col-md-auto" style="width: 50%">
+                    <div class="info-block">
+                        <h2>Recently Finished Tasks</h2>
+                        <table class="table table-dark">
+                            <thead>
+                            <tr>
+                                <th>Name</th>
+                                <th>ID</th>
+                                <th>Executor</th>
+                                <th>Posted</th>
+                                <th>Start</th>
+                                <th>Queued</th>
+                                <th>Took</th>
+                                <th>Outcome</th>
+                                <th>Message</th>
+                            </tr>
+                            </thead>
+                            <tbody hx-get="/hapi/simpleinfo/taskhistory" hx-trigger="load, every 2s">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-md-auto">
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-md-auto" style="width: 50%">
+                    <div class="info-block">
+                        <h2>Cluster Tasks</h2>
+                        <table class="table table-dark">
+                            <thead>
+                            <tr>
+                                <th style="min-width: 128px">Task</th>
+                                <th>ID</th>
+                                <th>Posted</th>
+                                <th>Owner</th>
+                            </tr>
+                            </thead>
+                            <tbody hx-get="/hapi/simpleinfo/tasks" hx-trigger="load,every 1s">
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+                <div class="col-md-auto">
+                </div>
+            </div>
+        </div>
+    </curio-ux>
 </body>
+
 </html>
