--- a/curiosrc/web/static/index.html
+++ b/curiosrc/web/static/index.html
@@ -60,7 +60,7 @@
     <curio-ux>
         <div class="page">
             <div class="row">
-                <div class="col-md-auto" style="width: 50%">
+                <div class="col-md-auto" style="max-width: 1000px">
                     <div class="info-block">
                         <h2>Chain Connectivity</h2>
                         <chain-connectivity></chain-connectivity>
@@ -71,7 +71,7 @@
             </div>
 
             <div class="row">
-                <div class="col-md-auto" style="width: 50%">
+                <div class="col-md-auto" style="max-width: 1000px">
                     <div class="info-block">
                         <h2>Cluster Machines</h2>
                         <table class="table table-dark">
@@ -79,6 +79,9 @@
                             <tr>
                                 <th>Host</th>
                                 <th>ID</th>
+                                <th>CPUs</th>
+                                <th>RAM</th>
+                                <th>GPUs</th>
                                 <th>Last Contact</th>
                                 <th>Tasks (24h)</th>
                             </tr>
@@ -93,7 +96,7 @@
             </div>
 
             <div class="row">
-                <div class="col-md-auto" style="width: 50%">
+                <div class="col-md-auto" style="max-width: 1000px">
                     <div class="info-block">
                         <h2><a href="/pipeline_porep.html">PoRep Pipeline</a></h2>
                         <table class="table table-dark">
@@ -120,7 +123,7 @@
             </div>
 
             <div class="row">
-                <div class="col-md-auto" style="width: 50%">
+                <div class="col-md-auto" style="max-width: 1000px">
                     <div class="info-block">
                         <h2>Actor Summary</h2>
                         <table class="table table-dark">
@@ -133,7 +136,7 @@
                                 <th>Balance</th>
                                 <th>Available</th>
                                 <th>Worker</th>
-                                <th>Wins</th>
+                                <th style="min-width: 100px">Wins</th>
                             </tr>
                             </thead>
                             <tbody hx-get="/hapi/simpleinfo/actorsummary" hx-trigger="load,every 5s">
@@ -147,7 +150,7 @@
 
 
             <div class="row">
-                <div class="col-md-auto" style="width: 50%">
+                <div class="col-md-auto" style="max-width: 1000px">
                     <div class="info-block">
                         <h2>Recently Finished Tasks</h2>
                         <table class="table table-dark">
@@ -174,7 +177,7 @@
             </div>
 
             <div class="row">
-                <div class="col-md-auto" style="width: 50%">
+                <div class="col-md-auto" style="max-width: 1000px">
                     <div class="info-block">
                         <h2>Cluster Tasks</h2>
                         <table class="table table-dark">
