--- a/curiosrc/web/static/config/index.html
+++ b/curiosrc/web/static/config/index.html
@@ -22,6 +22,7 @@
         this.loadData();
         this.message = this.readCookie('message');
         this.eraseCookie('message');
+        this.addName = '';
       }
       static get styles() {
         return [css`
@@ -46,6 +47,13 @@
                   </tr>
               `)}
           </table>
+            <input autofocus type="text" id="layername" placeholder="Layer Name" @change=${this.updateName}>
+            <button class="button" @click=${this.addLayer}>Add Layer</button>
+          <hr>
+          <span>
+            To delete a layer, use ysqlsh to issue the following command:<br>
+            <code lang=sql>DELETE FROM curio.harmony_config WHERE title = 'my_layer_name';</code>
+          </span>
         `;
       }
       loadData() {
@@ -76,6 +84,26 @@
       }
       eraseCookie(name) {
         document.cookie = name + '=; expires=Thu, 01 Jan 1970 00:00:00 UTC; path=/;';
+      }
+
+      updateName(e) {
+        this.addName = e.target.value;
+      }
+      addLayer() {
+        // get a name
+        var v = this.addName;
+        if (v === '') {
+          alert('Error: Layer name cannot be empty');
+          return;
+        }
+
+        axios.post('/api/config/addlayer', { name: v })
+          .then(response => {
+            window.location.href = '/config/edit.html?layer=' + v;
+          })
+          .catch(error => {
+            alert('Error adding layer:', error);
+          });
       }
     });
   </script>
